# multiclass_yolo_labeling

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
multilabel_yolo/: __init__.py  cli.py  server.py
multilabel_yolo/static/: app.js
static/: index.html  styles.css
