[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilabel-yolo"
version = "0.1.0"
description = "A web-based annotation tool for creating YOLO-format object detection datasets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "sdburde", email = "sdbstorage1@gmail.com"}
]
keywords = ["yolo", "annotation", "object-detection", "fastapi", "dataset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sdburde/multiclass_yolo_labeling"
Repository = "https://github.com/sdburde/multiclass_yolo_labeling.git"
Issues = "https://github.com/sdburde/multiclass_yolo_labeling/issues"

[project.scripts]
multilabel-yolo = "multilabel_yolo.cli:main"

[tool.setuptools.packages.find]
include = ["multilabel_yolo*"]

[tool.setuptools.package-data]
multilabel_yolo = ["static/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
